接管ultimateshop的價格與限額