@@ -3,6 +3,7 @@ package top.ellan.ecobridge.bridge;
 import top.ellan.ecobridge.EcoBridge;
 import top.ellan.ecobridge.util.LogUtil;
 
+import java.io.ByteArrayInputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.lang.foreign.Arena;
@@ -10,9 +11,17 @@ import java.lang.foreign.MemorySegment;
 import java.lang.foreign.SymbolLookup;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.StandardCopyOption;
 import java.security.MessageDigest;
 import java.util.Optional;
 
+/**
+ * NativeLoader (Fixed Version)
+ * <p>
+ * 修复日志:
+ * 1. 优化 extractLibrary 逻辑: 单次读取 InputStream 到内存，避免多次打开资源流导致 ClassLoader 问题。
+ * 2. 增强文件写入原子性: 使用 Files.copy 替代 Files.write。
+ */
 public class NativeLoader {
 
     private static final String LIB_NAME = "ecobridge_rust";
@@ -26,6 +35,7 @@ public class NativeLoader {
 
         try {
             Path libPath = extractLibrary(plugin);
+            
             // 使用 Shared Arena 允许跨线程调用并显式关闭
             globalArena = Arena.ofShared();
             symbolLookup = SymbolLookup.libraryLookup(libPath, globalArena);
@@ -73,23 +83,43 @@ public class NativeLoader {
         String name = (os.contains("win") ? "" : "lib") + LIB_NAME + suffix;
         Path target = plugin.getDataFolder().toPath().resolve("natives").resolve(name);
 
+        // [Fix] 核心修复：一次性读取所有字节到内存，立即关闭 InputStream
+        // 这避免了多次调用 getResource 可能导致的 null 或 stream closed 问题
+        byte[] resourceBytes;
         try (InputStream in = plugin.getResource(name)) {
             if (in == null) throw new IOException("Native lib not found in jar: " + name);
-            byte[] newBytes = in.readAllBytes();
-
-            if (Files.exists(target)) {
-                try {
-                    byte[] oldBytes = Files.readAllBytes(target);
-                    if (calculateHash(newBytes).equals(calculateHash(oldBytes))) {
-                        return target;
-                    }
-                } catch (IOException ignored) {}
-            }
-
-            Files.createDirectories(target.getParent());
-            Files.write(target, newBytes);
-            return target;
+            resourceBytes = in.readAllBytes();
         }
+
+        // 计算新文件的哈希
+        String newHash = calculateHash(resourceBytes);
+
+        // 检查现有文件
+        if (Files.exists(target)) {
+            try {
+                byte[] existingBytes = Files.readAllBytes(target);
+                String oldHash = calculateHash(existingBytes);
+
+                // 哈希一致，跳过写入，直接返回
+                if (newHash.equals(oldHash)) {
+                    // LogUtil.debug("Native lib hash verified (" + newHash.substring(0, 8) + "), skipping extraction.");
+                    return target;
+                }
+            } catch (IOException e) {
+                LogUtil.warn("校验现有 Native 库失败，准备覆盖: " + e.getMessage());
+            }
+        }
+
+        // 写入文件 (使用内存中的 bytes)
+        Files.createDirectories(target.getParent());
+        
+        // [Fix] 使用 ByteArrayInputStream + Files.copy 确保写入过程的标准性
+        try (ByteArrayInputStream bin = new ByteArrayInputStream(resourceBytes)) {
+            Files.copy(bin, target, StandardCopyOption.REPLACE_EXISTING);
+        }
+        
+        LogUtil.info("已提取 Native 库至: " + target + " (Hash: " + newHash.substring(0, 8) + ")");
+        return target;
     }
 
     private static String calculateHash(byte[] data) {
